Certificate Verification page Added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,6 +144,17 @@ a:hover {
   margin-bottom: 12%;
 }
 
+.certificateverify{
+  font-size: 15px;
+  height: 26px;
+}
+
+.certificateverify:hover {
+  font-size: 17px;
+  background-color: #dcdcdc;
+  text-decoration: none;
+}
+
 .newsletter {
   margin-bottom: 6%;
   font-size: 15px;
@@ -430,7 +441,7 @@ a:hover {
   margin: 0;
 }
 
-.btn-warning {
+.btn-warning1 {
   text-align: center;
   background-color: #fca600;
   border-radius: 10px;
@@ -439,6 +450,62 @@ a:hover {
   height: 50px;
   font-size: 25px;
   opacity: 0.8;
+}
+
+/* ............................................Verify Certificate........................................ */
+.cert_position {
+  margin: 55px 0 0 90px;
+  color: white;
+}
+
+.cert_position h1 {
+  font-weight: 600;
+  font-size: 76px;
+}
+
+.cert_span {
+  color: #FF0000;
+}
+
+.cert_position p {
+  margin-top: 20px;
+  font-size: 18px;
+  line-height: 30px;
+}
+
+.form {
+  margin: 20px 0 0 0;
+}
+
+.certnum{
+  color: #ffffff;
+  height: 35px;
+  background: linear-gradient(
+      180deg,
+      rgba(235, 235, 224, 0.1) 0%,
+      rgba(245, 245, 240, 0) 100%
+    ),
+    rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(1px);
+  border-radius: 10px;
+  border: #ffffff solid 1px;
+  width: 120%;
+}
+
+.btn-verify {
+  text-align: center;
+  background-color: #FF0000;
+  border-color: #FF0000;
+  border-radius: 10px;
+  margin-top: 20px;
+  width: 10%;
+  height: 50px;
+  font-size: 25px;
+  opacity: 0.8;
+}
+
+.btn-verify:hover{
+  background-color: #FF2E2E;
 }
 
 /* ================================================= media queries ====================================== */
@@ -573,7 +640,7 @@ a:hover {
   .say_form .form-group {
     width: 280px;
   }
-  .btn-warning {
+  .btn-warning,.btn-warning1 {
     width: 20%;
   }
 }
@@ -592,7 +659,7 @@ a:hover {
   .say_form .form-group {
     width: 270px;
   }
-  .btn-warning {
+  .btn-warning,.btn-warning1 {
     width: 120px;
     margin-bottom: 50px;
   }
@@ -608,4 +675,64 @@ a:hover {
   .form-check label {
     display: inline;
   }
+}
+
+/* ............................................cert something page........................................ */
+
+@media screen and (max-width: 768px) {
+  .cert_position {
+    margin: 40px 0 0 50px;
+  }
+  .cert_position h1 {
+    font-size: 8vw;
+  }
+  .cert_position p {
+    font-size: 2vw;
+    line-height: 24px;
+  }
+  .cert_form .form-group {
+    width: 280px;
+  }
+  .btn-verify {
+    width: 20%;
+  }
+}
+
+@media screen and (max-width: 575.98px) {
+  .cert_position {
+    padding: 100px 0 0 0;
+    margin: 0;
+  }
+  .cert_position h1 {
+    font-size: 12vw;
+  }
+  .cert_position p {
+    font-size: 3vw;
+  }
+  .cert_form .form-group {
+    width: 270px;
+  }
+  .btn-verify {
+    width: 120px;
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cert_position p {
+    font-size: 4vw;
+  }
+  .cert_form .form-group {
+    width: 240px;
+  }
+  .form-check label {
+    display: inline;
+  }
+}
+
+/* Modal */
+
+.modal-content {
+  width: 100%;
+  height: 300px;
 }
